--- a/home.css
+++ b/home.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&family=Source+Sans+Pro&display=swap');
+@font-face {
+    font-family: "Righteous";
+    src: url("./Righteous-Regular.ttf");
+  }
 *{
     box-sizing: border-box;
     margin: 0;
@@ -27,7 +31,14 @@ header{
     /* background-color: rgba(22, 33, 62, 0.9); */
     background-color:#20c997;
 }
-/* 6a2aa3*/
+.logo
+{
+    font-size: 150%;
+    font-family:Righteous;
+    color:#16213E;
+    opacity: 0.8;
+
+}
 .links{
     font-weight: lighter;
     font-size: 90%;
@@ -53,7 +64,7 @@ a{
     transition: 0.1s;
 }
 .links span:hover a{
-    color:#20c997;
+    color:#16213E;
 }
 .welcome
 {
@@ -67,8 +78,48 @@ a{
 .intro
 {
     font-family: poppins;
-    font-size: 100%;
+    font-size: 120%;
     margin-left: 10%;
     margin-right: 10%;
     color: antiquewhite;
+}
+footer{
+    background-color: #16213E;
+    color:white;
+    text-align:center;
+    margin-top:2%;
+    width:100%;
+    font-family: poppins;
+    padding:10px;
+    font-size:75%;
+    position: absolute;
+    bottom: 0%;
+}
+footer a{
+    color:#20c997;
+    text-decoration: underline;
+}
+.signup
+{
+    color:#bbb;
+    /* background-color:rgba(255,255,255,0.1); */
+    background-color:#20c997;
+    margin-right:400px;
+    font-size: 18px;
+    border:none;
+    color: #16213E;
+    cursor: pointer;
+    border-color: #20c997;
+    font-family: "poppins";
+    padding: 1%;
+    border-radius: 10px;
+}
+.signup:hover
+{
+    box-shadow: 0 0 75px 5px #20c997;
+}
+.buttons
+{
+    margin-left: 32%;
+    margin-top: 2%;
 }
