--- a/friends.css
+++ b/friends.css
@@ -26,7 +26,8 @@
     /* padding-top: 1%; */
     /* padding-left: 1%; */
     display:inline;
-    border-radius: 20px 0 0 20px;
+    /* border-radius: 20px 0 0 20px; */
+    border-radius: 50px;
     width: 50px;
     height: 50px;
     float: left;
@@ -73,6 +74,13 @@
     padding-bottom: 1%;
     z-index: 2;
 }
+.frnds p
+{
+    text-align: center;
+    font-size: 24px;
+    font-family: poppins;
+    color: antiquewhite;
+}
 .add
 {
     
@@ -115,6 +123,7 @@ form {
     border-radius: 10px;
     background-color: #f2f2f2;
     font-family: poppins;
+    /* display: none; */
 }
 
 label {
@@ -123,10 +132,12 @@ label {
     font-family: poppins;
 
 }
-#friend-name
+#num-people,#num-people1
 {
     padding: 2%;
     font-size: 18px;
+    margin-bottom: 2%;
+    
 }
 .total
 {
@@ -134,4 +145,18 @@ label {
     color: antiquewhite;
     margin-left: 10%;
     font-family: poppins;
+}
+.noppl
+{
+    /* padding: 2%; */
+    font-size: 18px;
+    margin-bottom: 2%;
+    /* display: none; */
+}
+.noppl input
+{
+    padding: 2%;
+    font-size: 18px;
+    margin-bottom: 1%; 
+    width: 100%; 
 }
