--- a/templates/Login.html
+++ b/templates/Login.html
@@ -13,7 +13,7 @@
     <header>
         <div class="links">
             <span></span>
-            <span><a href='../../activity.html'>Activity</a></span>
+            <span><a href='activity.html'>Activity</a></span>
             <span><a href='../../friends.html'>Friends</a></span>
             <span><a href='../../groups.html'>Groups</a></span>
    </div>
@@ -48,5 +48,6 @@
   {% endif %}
 {% endwith %}
             </div></div>
+</body>
               
      
