--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -7,11 +7,12 @@
     <header>
         <p class="logo">SPLITWISE...</p>
         <div class="links">
-            <span><a href='/activity.html'>Activity</a></span>
-            <span><a href='/friends.html'>Friends</a></span>
-            <!-- <span><a href='/groups.html'>Groups</a></span> -->
+            <!-- <span><a href='/activity.html'>Activity</a></span> -->
+            
+            <span><a href="{{url_for('Friends')}}">Friends</a></span>
+            <span><a href="{{url_for('Groups')}}">Groups</a></span>
             <span><img src="https://i.ibb.co/HqRCNz1/profile.png" styl alt="profile"> <a href="{{url_for('Profile')}}">profile</a></span>
-        </div>
+                    </div>
     </header>
     <div class="header">
         <h1>DASHBOARD</h1>
@@ -29,7 +30,7 @@
     </div>
     <br><br><br><br>
     <div class="button-wrapper">
-        <button class="button1" id="expense"><a href="expense.html">Add an expense</a></button>
+        <button class="button1" id="expense"><a href="{{url_for('Expense')}}">Add an expense</a></button>
         <button class="button2" id="owe"><a href="settle.html">Settle an expense</a></button>
 
     </div>
