--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -21,9 +21,12 @@
     </header>
 
 
-<div class="container2" style="color: antiquewhite;">
-    <img src="https://play-lh.googleusercontent.com/xextMuNptM547SMenMUaywqIWmvqekf-9urJfXF2N45r-lYH0an-bjgFO9IYzqgSkOTU" style="border-radius: 50%;width: 300px;height: 300px;position: relative;top:200px;left:400px">
-    <div class="container3" style="position: relative;top:250px">
+<div class="container2" style="color: antiquewhite;  display: grid;
+align-items: top;
+grid-template-columns: 0.5fr 1fr;
+column-gap: px;">
+    <img src="https://play-lh.googleusercontent.com/xextMuNptM547SMenMUaywqIWmvqekf-9urJfXF2N45r-lYH0an-bjgFO9IYzqgSkOTU" style="border-radius: 50%;width: 300px;height: 300px;position: relative;top:200px;left:250px">
+    <div class="container3" style="position: relative;top:170px;right:150px">
 <form method="post" action="{{ url_for('Signup') }}">
     <label>Username:</label><br>
     <input type="text" name="username"><br>
