--- a/templates/Groups.html
+++ b/templates/Groups.html
@@ -32,7 +32,7 @@
       
     </div>
     <p class="total">Total Groups : {{l}}</p>
-    <form data-action="/add-group" method="POST">
+    <form data-action="/add_group" method="POST">
 
       <h2 style="color:#16213E;">Add a Group</h2>
       <input type="text" id="num-people2" name="num-people2" placeholder="Enter group name" required>
