--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -31,7 +31,7 @@
     <br><br><br><br>
     <div class="button-wrapper">
         <button class="button1" id="expense"><a href="{{url_for('Expense')}}">Add an expense</a></button>
-        <button class="button2" id="owe"><a href="settle.html">Settle an expense</a></button>
+        <button class="button2" id="owe"><a href="{{url_for('Settle')}}">Settle an expense</a></button>
 
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
