--- a/templates/Settle.html
+++ b/templates/Settle.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Dashboard</title>
-    <link rel="stylesheet" href="expense.css">
+    <link rel="stylesheet" href="/static/expense.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <h1>SETTLE AN EXPENSE</h1>
     </div>
     <div class="info2">
-        <form>
+        <form method="post" action="{{url_for('Settleamt')}}"  >
             <h2>Payment Method</h2>
             <div class="form-group">
                 <label for="username">Username:</label>
