--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -13,24 +13,20 @@
 <body>
     <header>
         <div class="links">
-            <span><a href="#" style="position: relative;right:1000px">Splitwise</a>  </span>
-            <span><a href='../../activity.html'>Activity</a></span>
-            <span><a href='../../friends.html'>Friends</a></span>
-            <span><a href='../../groups.html'>Groups</a></span>
+            <span style="position: relative;right:700px;"><a href="#" >Splitwise</a>  </span>
+            <span style="position: relative;left:300px;"><a href="{{url_for('Home')}}">About</a></span>
+            
         </div>
     </header>
 
 
-<div class="container2" style="color: antiquewhite;  display: grid;
-align-items: top;
-grid-template-columns: 0.5fr 1fr;
-column-gap: px;">
+<div class="container2" style="color: black;">
     <img src="https://play-lh.googleusercontent.com/xextMuNptM547SMenMUaywqIWmvqekf-9urJfXF2N45r-lYH0an-bjgFO9IYzqgSkOTU" style="border-radius: 50%;width: 300px;height: 300px;position: relative;top:200px;left:250px">
     <div class="container3" style="position: relative;top:170px;right:150px">
 <form method="post" action="{{ url_for('Signup') }}">
     <label>Username:</label><br>
     <input type="text" name="username"><br>
-    <label>Emali:</label><br>
+    <label>Emalil:</label><br>
     <input type="text" name="email"><br>
     <label>Mobile no.:</label><br>
     <input type="text" name="mobile"><br>
@@ -39,12 +35,12 @@ column-gap: px;">
     <input type="text" name="password"><br>
 
     <input type="hidden" name="id" value="2">
-    <button type="submit" style="position: relative;top:10px;">Login</button>
+    <button type="submit" style="position: relative;top:10px;">Create accout</button>
   </form>
 
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-    <ul class="flash" style="position: relative;top: 30px;right:30px;" >
+    <ul class="flash" style=" color:aliceblue;position: relative;left:250px;" >
       
         <li>{{ messages[-1][1] }}</li>
         <!-- <li>new to splitwise?<a href="{{url_for('signup')}}">Signup</a></li> -->
