--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -7,15 +7,14 @@
     <header>
         <p class="logo">SPLITWISE...</p>
         <div class="links">
-            <!-- <span><a href='/activity.html'>Activity</a></span> -->
-            
+            <span class="current-page" style="color:#16213E;">Dashboard</span>
             <span><a href="{{url_for('Friends')}}">Friends</a></span>
             <span><a href="{{url_for('Groups')}}">Groups</a></span>
-            <span><img src="https://i.ibb.co/HqRCNz1/profile.png" styl alt="profile"> <a href="{{url_for('Profile')}}">profile</a></span>
+            <span><a href="{{url_for('Profile')}}"><img src="https://i.ibb.co/d5rgsbs/IMG-20230507-WA0009.jpg"  ></a></span>
                     </div>
     </header>
     <div class="header">
-        <h1>DASHBOARD</h1>
+        <h1>DASHBOARD<span class="dot">.</span></h1>
     </div>
    
     <div class="boxes-wrapper">
@@ -31,9 +30,11 @@
     <br><br><br><br>
     <div class="button-wrapper">
         <button class="button1" id="expense"><a href="{{url_for('Expense')}}">Add an expense</a></button>
-        <button class="button2" id="owe"><a href="{{url_for('Settle')}}">Settle an expense</a></button>
+        <button class="button2" id="owe"><a href="{{url_for('Expense')}}">Settle an expense</a></button>
 
     </div>
+    <div class="tts-design"></div>
+    <div class="tts-design2"></div>
     {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     <ul class="flash" style="position: absolute;bottom: 0;" >
