--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -11,36 +11,34 @@
 </head>
 
 <body>
-    <header>
-        <div class="links">
-            <span style="position: relative;right:700px;"><a href="#" >Splitwise</a>  </span>
-            <span style="position: relative;left:300px;"><a href="{{url_for('Home')}}">About</a></span>
-            
-        </div>
-    </header>
-
-
-<div class="container2" style="color: black;">
-    <img src="https://play-lh.googleusercontent.com/xextMuNptM547SMenMUaywqIWmvqekf-9urJfXF2N45r-lYH0an-bjgFO9IYzqgSkOTU" style="border-radius: 50%;width: 300px;height: 300px;position: relative;top:200px;left:250px">
-    <div class="container3" style="position: relative;top:170px;right:150px">
+  <header>
+    <p class="logo">SPLITWISE...</p>
+        <span class="homeimg"><img  href="{{url_for('Home')}}"src="https://i.ibb.co/fvzXNqM/IMG-20230507-WA0011.png" alt="IMG-20230507-WA0011"></span>
+</header>
+<div class="container2" style="color: antiquewhite;display: grid;
+align-items: top;
+grid-template-columns: 0.5fr 1fr;
+column-gap: px;">
+    <img src="https://play-lh.googleusercontent.com/xextMuNptM547SMenMUaywqIWmvqekf-9urJfXF2N45r-lYH0an-bjgFO9IYzqgSkOTU" style="border-radius: 50%;width: 300px;height: 300px;position: relative;top:200px;left:400px">
+    <div class="container3" style="position: relative;top:250px">
 <form method="post" action="{{ url_for('Signup') }}">
     <label>Username:</label><br>
     <input type="text" name="username"><br>
-    <label>Emalil:</label><br>
+    <label>Emali:</label><br>
     <input type="text" name="email"><br>
     <label>Mobile no.:</label><br>
     <input type="text" name="mobile"><br>
     <label>Password:</label><br>
     
-    <input type="text" name="password"><br>
+    <input type="password" name="password"><br>
 
     <input type="hidden" name="id" value="2">
-    <button type="submit" style="position: relative;top:10px;">Create accout</button>
+    <button type="submit" style="position: relative;top:10px;">Login</button>
   </form>
 
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-    <ul class="flash" style=" color:aliceblue;position: relative;left:250px;" >
+    <ul class="flash" style="position: relative;top: 30px;right:30px;" >
       
         <li>{{ messages[-1][1] }}</li>
         <!-- <li>new to splitwise?<a href="{{url_for('signup')}}">Signup</a></li> -->
