--- a/static/style.css
+++ b/static/style.css
@@ -1,373 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&family=Source+Sans+Pro&display=swap');
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-body {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-    background-color: #16213E;
-}
-
-header {
-    height: 8%;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-family: poppins;
-    font-size: 120%;
-    color: white;
-    font-weight: bolder;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    /* background-color: rgba(22, 33, 62, 0.9); */
-    background-color: #20c997;
-}
-
-/* 6a2aa3*/
-.links {
-    font-weight: lighter;
-    font-size: 90%;
-    margin-left: auto;
-    width: 50%;
-    padding-right: 0;
-    order: 2;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-.links span {
-    margin: 5%;
-    margin-right: 0;
-    float: right;
-    cursor: pointer;
-    padding: 5px 20px;
-    transition: 0.3s;
-    border-radius: 10px;
-}
-
-.links span a {
-    transition: 0.1s;
-}
-
-.links span:hover a {
-    color: #20c997;
-}
-
-.welcome {
-    margin-top: 5%;
-    margin-bottom: 1%;
-    font-family: poppins;
-    font-size: 300%;
-    text-align: center;
-    color: antiquewhite;
-}
-
-.intro {
-    font-family: poppins;
-    font-size: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
-    color: antiquewhite;
-}
-
-
-.container2 {
-    display: grid;
-    align-items: top;
-    grid-template-columns: 0.5fr 1fr;
-    column-gap: 50px;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.links {
-    display: flex;
-    align-items: center;
-}
-
-.links span {
-    margin-right: 20px;
-}
-
-.links a {
-    text-decoration: none;
-    color: black;
-}
-
-.profile {
-    margin: 50px auto;
-    max-width: 600px;
-    text-align: center;
-}
-
-.profile img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-
-.profile h1 {
-    margin-top: 20px;
-    font-size: 36px;
-    font-weight: bold;
-    color: antiquewhite;
-}
-
-.profile p {
-    margin-top: 10px;
-    font-size: 18px;
-    color: antiquewhite;
-    font-family: poppins;
-}
-
-.friends {
-    font-family: poppins;
-    color: antiquewhite;
-    font-size: 24px;
-    float: left;
-}
-
-.profile-stats {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-}
-
-.profile-stat {
-    margin-right: 50px;
-}
-
-.profile-stat h3 {
-    font-size: 24px;
-    font-weight: bold;
-    color: antiquewhite;
-    font-family: poppins;
-}
-
-.profile-stat p {
-    margin-top: 10px;
-    font-size: 18px;
-    color: antiquewhite;
-    font-family: poppins;
-}
-
-.footer {
-    background-color: #f2f2f2;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer-copy,
-.footer-about {
-    font-size: 14px;
-}
-
-.footer-about a {
-    text-decoration: none;
-    color: black;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&family=Source+Sans+Pro&display=swap');
-
 @font-face {
     font-family: "Righteous";
-    src: url("./Righteous-Regular.ttf");
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-body {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-    background-color: #16213E;
-}
-
-header {
-    height: 8%;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-family: poppins;
-    font-size: 120%;
-    color: white;
-    font-weight: bolder;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    /* background-color: rgba(22, 33, 62, 0.9); */
-    background-color: #20c997;
-}
-
-.links span img {
-    width: 40px;
-    height: 40px;
-    position: relative;
-    left: 530px;
-}
-
-.logo {
-    font-size: 150%;
-    font-family: Righteous;
-    color: #16213E;
-    opacity: 0.8;
-
-}
-
-.links {
-    font-weight: lighter;
-    font-size: 90%;
-    margin-left: auto;
-    width: 50%;
-    padding-right: 5%;
-    order: 2;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-.links span {
-    margin: 5%;
-    margin-right: 0;
-    float: right;
-    cursor: pointer;
-    padding: 5px 20px;
-    transition: 0.3s;
-    border-radius: 10px;
-
-}
-
-.links span a {
-    transition: 0.1s;
-}
-
-.links span:hover a {
-    color: #16213E;
-}
-
-.header h1 {
-    font-family: poppins;
-    margin-top: 50px;
-    color: white;
-    font-size: 50px;
-}
-
-.header {
-    margin-left: 10%;
-}
-
-.button-wrapper {
-    display: flex;
-    justify-content: center;
-}
-
-.button1,
-.button2 {
-    font-family: poppins;
-    padding: 10px;
-    margin: 10px;
-    background-color: #20c997;
-    color: white;
-    border-color: white;
-}
-
-
-.boxes-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-}
-
-.box1 {
-    font-family: poppins;
-    flex: 1;
-    padding: 15px;
-    /* border-radius: 4px; */
-    text-align: center;
-    /* margin: 0 10px; Change margin to 0 10px */
-    margin-left: 15%;
-}
-
-.box2 {
-    font-family: poppins;
-    flex: 1;
-    padding: 15px;
-    /* border-radius: 4px; */
-    /* margin: 0 10px; Change margin to 0 10px */
-}
-
-.box1 h2,
-.box2 h2 {
-    margin-top: 0;
-    font-size: 24px;
-    color: white;
-}
-
-.box1 p,
-.box2 p {
-    margin-top: 10px;
-    font-size: 36px;
-    font-weight: bold;
-    color: white;
-}
-
-
-
-footer {
-    background-color: #16213E;
-    color: white;
-    text-align: center;
-    margin-top: 2%;
-    width: 100%;
-    font-family: poppins;
-    padding: 10px;
-    font-size: 75%;
-    position: absolute;
-    bottom: 0%;
-}
-
-footer a {
-    color: #20c997;
-    text-decoration: underline;
-}
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&family=Source+Sans+Pro&display=swap');
-@font-face {
-    font-family: "Righteous";
-    src: url("./Righteous-Regular.ttf");
+    src: url("../Righteous-Regular.ttf");
   }
 *{
     box-sizing: border-box;
@@ -378,6 +12,77 @@ body{
     width: 100vw;
     overflow-x: hidden;
     background-color: #16213E;
+}
+.tts-design, .tts-design2{
+    width:110%;
+    height: 60px;
+    background-color:#4ea389;
+    position: absolute;
+    margin-left:-1%;
+    bottom:15%;
+    transform: rotate(6.5deg);
+    z-index:1;
+}
+.tts-design2{
+    bottom: 10%;
+    z-index: 3;
+    transform: rotate(-5deg);
+    background-color: #cac3c3;
+}
+#welcome
+{
+    margin-top: 5%;
+    margin-bottom: 1%;
+    font-family: poppins;
+    font-size:400% ;
+    text-align: center;
+    color: antiquewhite;
+}
+.intro
+{
+    font-family: poppins;
+    font-size: 150%;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: antiquewhite;
+}
+.signup,.login
+{
+    color:#bbb;
+    /* background-color:rgba(255,255,255,0.1); */
+    background-color:#20c997;
+    margin-right:400px;
+    font-size: 18px;
+    border:none;
+    color: #16213E;
+    cursor: pointer;
+    border-color: #20c997;
+    font-family: "poppins";
+    padding: 1%;
+    border-radius: 10px;
+}
+.signup:hover,.login:hover
+{
+    box-shadow: 0 0 75px 5px #20c997;
+}
+.buttons
+{
+    margin-left: 32%;
+    margin-top: 2%;
+}
+.home img
+{
+    border-radius: 10px;
+    height: 60px;
+    width: 60px;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+.pics
+{
+    margin-left:35%;
+    margin-top: 2%;
+
 }
 header{
     height: 8%;
@@ -394,7 +99,6 @@ header{
     position: sticky;
     top:0;
     z-index: 2;
-    /* background-color: rgba(22, 33, 62, 0.9); */
     background-color:#20c997;
 }
 .links span img
@@ -403,14 +107,23 @@ header{
     height:40px;
     position: relative;
     left:530px;
+    border-radius: 50%;
+}
+.homeimg img
+{
+    position: relative;
+    left: 1350px;
+    width: 40px;
+    height: 40px;
+    border-radius:20%;
 }
 .logo
 {
     font-size: 150%;
-    font-family:Righteous;
+    font-family:poppins;
     color:#16213E;
     opacity: 0.8;
-
+    font-weight: bold;
 }
 .links{
     font-weight: lighter;
@@ -444,7 +157,7 @@ a{
 .header h1{
     font-family: poppins;
     margin-top: 50px;
-    color: white;
+    color:antiquewhite;
     font-size: 50px;
 }
 
@@ -463,10 +176,15 @@ a{
     padding: 10px;
     margin: 10px;
     background-color: #20c997;
-    color: white;
-    border-color:white ;
+    color:#bbb;
+    border-color:#20c997 ;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
-
+.button1:hover,.button2:hover{
+    box-shadow: 0 0 1px 1px #20c997;
+}
 
 .boxes-wrapper {
     display: flex;
@@ -474,11 +192,155 @@ a{
     align-items: center;
     margin-top: 40px;
 }
+
+.box1 {
+    font-family: poppins;
+    flex: 1;
+    padding: 15px;
+    /* border-radius: 4px; */
+    text-align: center;
+    /* margin: 0 10px; Change margin to 0 10px */
+    margin-left:15%;
+}
+.box2
+{
+    font-family: poppins;
+    flex: 1;
+    padding: 15px;
+    /* border-radius: 4px; */
+    /* margin: 0 10px; Change margin to 0 10px */
+}
+.box1 h2,.box2 h2 {
+    margin-top: 0;
+    font-size: 24px;
+    color: white;
+}
+
+.box1 p,.box2 p {
+    margin-top: 10px;
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
+}
+.profile {
+    margin: 50px auto;
+    max-width: 600px;
+    text-align: center;
+}
+
+.profile img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.profile h1 {
+    margin-top: 20px;
+    font-size: 36px;
+    font-weight: bold;
+    color: antiquewhite;
+    font-family: poppins;
+}
+.profiletext
+{
+    font-family: poppins;
+    font-size: 50px;
+    color: antiquewhite; 
+    position: relative;
+    right:700px;
+    font-weight: bold;
+}
+.profile a {
+    padding-top: 0%;
+    position: relative;
+    left:1000px;
+    bottom: 80px;
+    font-size: 18px;
+    color: antiquewhite;
+    font-family: poppins;
+    display:block;
+    width:80px;
+}
+.profile a:hover
+{
+    color: #20c997;
+}
+.friends
+{
+    font-family: poppins;
+    color: antiquewhite;
+    font-size: 24px;
+    float: left;
+}
+.profile-stats {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.profile-stat {
+    margin-right: 50px;
+}
+
+.profile-stat h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: antiquewhite;
+    font-family: poppins;
+}
+
+.profile-stat p {
+    margin-top: 10px;
+    font-size: 18px;
+    color: antiquewhite;
+    font-family: poppins;
+}
+.current-page{
+    position: relative;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+.current-page::after{
+    content:'.';
+    display: block;
+    font-family: poppins;
+    font-size:300%;
+    margin:0;
+    padding:0;
+    height: 0;
+    text-align: center;
+    position: absolute;
+    top: -30%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.dot
+{
+    color: #20c997;
+}
+  
+  footer{
+    background-color: #16213E;
+    color:white;
+    text-align:center;
+    margin-top:2%;
+    width:100%;
+    font-family: poppins;
+    padding:10px;
+    font-size:75%;
+    position: absolute;
+    bottom: 0%;
+}
+footer a{
+    color:#20c997;
+    text-decoration: underline;
+}
 .friend-det
 {
     display: block;
     height: 60px;
-  
+    /* background-image: linear-gradient(to right,#16213E,#20c997); */
+    /* border-color: aquamarine; */
     margin-left:10%;
     border-radius:10px;
     position: relative;
@@ -487,7 +349,7 @@ a{
     transition: 0.3s;
     margin-bottom: 0.5%;
     margin-right: 10%;
-
+    /* background: #16213E; */
 }
 
 .friend-det:hover  img{
@@ -498,17 +360,28 @@ a{
     font-size: 220%;
 }
 .friend-det img{
-    
+    /* padding-top: 1%; */
+    /* padding-left: 1%; */
     display:inline;
-    border-radius: 20px 0 0 20px;
+    /* border-radius: 20px 0 0 20px; */
+    border-radius: 50px;
     width: 50px;
     height: 50px;
     float: left;
     transition: 0.3s;
     object-fit: cover;
 }
-
-.name
+/* .friend-det span
+{
+    color:antiquewhite;
+    font-size:20px;
+    margin-left: 5%;
+    font-family: poppins;
+    /* text-align: center; */
+    /* margin-top: 2%; 
+    padding-top: 5%;
+} */
+.name,.name1
 {
     color:antiquewhite;
     font-size:20px;
@@ -534,9 +407,16 @@ a{
 .frnds
 {
     padding-top:2%;
-
+    /* margin-top:5%; */
     padding-bottom: 1%;
     z-index: 2;
+}
+.frnds p
+{
+    text-align: center;
+    font-size: 24px;
+    font-family: poppins;
+    color: antiquewhite;
 }
 .add
 {
@@ -580,18 +460,21 @@ form {
     border-radius: 10px;
     background-color: #f2f2f2;
     font-family: poppins;
+    /* display: none; */
 }
 
 label {
-   
+    /* display: block; */
     margin-bottom: 10px;
     font-family: poppins;
 
 }
-#friend-name
+#num-people,#num-people2
 {
     padding: 2%;
     font-size: 18px;
+    margin-bottom: 2%;
+    
 }
 .total
 {
@@ -600,4 +483,105 @@ label {
     margin-left: 10%;
     font-family: poppins;
 }
+.noppl
+{
+    /* padding: 2%; */
+    font-size: 18px;
+    margin-bottom: 2%;
+    /* display: none; */
+}
+.noppl input
+{
+    padding: 2%;
+    font-size: 18px;
+    margin-bottom: 1%; 
+    width: 100%; 
+}
+form {
+	max-width: 500px;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-sizing: border-box;
+}
 
+.form-group {
+	margin-bottom: 20px;
+}
+
+label {
+	display: block;
+	margin-bottom: 5px;
+	color: #333;
+}
+
+input {
+	width: 100%;
+	padding: 10px;
+	border-radius: 5px;
+	border: none;
+	box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+
+button[type="submit"] {
+	display: block;
+	margin: 0 auto;
+	padding: 10px 20px;
+	background-color: #20c997;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+	background-color: #17a87c;
+}
+
+.info2 .form-group label {
+    display: inline-block;
+    width: 150px;
+}
+
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-left: 1px;
+}
+
+.calculate-btn,
+.save-btn {
+    display: inline-block;
+    width: 45%;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color:antiquewhite;
+    background-color: #20c997;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.calculate-btn:hover,
+.save-btn:hover {
+    background-color:  #17a87c;;
+}
+
+#friend-cost-per-person, #group-cost-per-person {
+    color: black;
+}
+#friend-name
+{
+    padding: 2%;
+    font-family: poppins;
+    font-size: 18px;
+    margin-bottom: 2%;
+} 
+  
