--- a/templates/Groups.html
+++ b/templates/Groups.html
@@ -43,6 +43,8 @@
   <br>
   <div id="people-inputs"></div>
   <button type="submit" class="sub">Add</button>
+   <a style="position: relative;right:20px;top:30px;color: #16213E;">refresh the page to see updates</a>
+
 </form>
 
 <script src="/static/script.js"></script>
