--- a/templates/expense.html
+++ b/templates/expense.html
@@ -3,86 +3,30 @@
 
 <head>
     <title>Expense</title>
-    <link rel="stylesheet" href="/static/expense.css">
+    <!-- <link rel="stylesheet" href="/static/expense.css"> -->
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
     <header>
         <p class="logo">SPLITWISE...</p>
         <div class="links">
-            <!-- <span><a href='../../activity.html'>Activity</a></span>
-             -->
-            <span><a href="{{url_for('Dashboard')}}">Dashboard</a></span>
+            <span class="current-page" style="color:#16213E;">Dashboard</span>
             <span><a href="{{url_for('Friends')}}">Friends</a></span>
             <span><a href="{{url_for('Groups')}}">Groups</a></span>
-        </div>
+            <span><a href="{{url_for('Profile')}}"><img src="https://i.ibb.co/d5rgsbs/IMG-20230507-WA0009.jpg"  ></a></span>
+                    </div>
     </header>
     <div class="header">
-        <h1>ADD AN EXPENSE</h1>
+        <h1>ADD AN EXPENSE<span class="dot">.</span></h1>
 
     </div>
 
-    <!-- <div class="info">
-        <form action="addBill" method="POST">
-            <div class="form-group">
-                <label for="split-type">Split With</label>
-                <select id="split-type" name="split-type" required>
-                    <option value="">Select an option</option>
-                    <option value="friend">Friend</option>
-                    <option value="group">Group</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="amount">Amount to be Paid</label>
-                <input type="number" id="amount" name="amount" required>
-            </div>
-            <div class="form-group">
-                <label for="amount_u">Amount You Paid</label>
-                <input type="number" id="amount_u" name="amount_u">
-            </div>
-            <div id="friend-name" class="form-group-split-fields split-friend">
-                <label for="friend-name">Username</label>
-                <input type="text" id="friend_name" name="friend_name">
-            </div>
+    <div class="friend" style="color:antiquewhite;">
+        <h1 style="margin-left: 20%;font-family: poppins;"> With a Friend</h1>
 
-            <div id="friend-owes" class="form-group-split-fields split-friend">
-                <label>Amount You Are Owed</label>
-                <p><span id="friend-cost-per-person"></span></p>
-            </div>
-            <div id="group-name" class="form-group-split-fields split-group">
-                <label for="group-name">Group Name</label>
-                <input type="text" id="group_name" name="group_name">
-            </div>
-            <div id="group-fields" class="form-group-split-fields split-group">
-                <label for="group-size">Number of members</label>
-                <input type="number" id="group-size" name="group-size" min="1">
-            </div>
-            
-
-            <div id="group-cost" class="form-group-split-fields split-group">
-                <label>Amount Owed By Group Per Person</label>
-                <p><span id="group-cost-per-person"></span></p>
-            </div>
-            <div id="group-members" class="form-group-split-fields split-group">
-                <p>def</p>
-                
-            </div>
-
-            <div class="button-group">
-                <button onclick="CalculateGroupAmount()" type="button" class="save-btn">Save</button>
-            </div>
-
-        </form>
-
-    </div> -->
-
-
-    <div class="friend" style="color: aliceblue;">
-        <!-- <h2 style="position: relative;left:100px;"> With a Friend</h2> -->
-
-         <form method="POST" action="{{ url_for('addexfr') }}">
-            <h2 style="color: black; font-size: 20px;">With a Group</h2>
-            <!-- <label>Username</label><br>
+        <form method="POST" action="{{ url_for('addexfr') }}">
+            <label>Username</label><br>
             <input type="text" name="name"><br>
             <label>total amount:</label><br>
             <input type="integer" name="amttol"><br>
@@ -90,12 +34,12 @@
             <input type="integer" name="amtU"><br>
 
             <input type="hidden" name="id" value="1">
-            <button type="submit" style="position: relative;top:10px;">ADD</button> -->
+            <button type="submit" style="position: relative;top:10px;">ADD</button>
 
-        </form>
-    </div>
-        <div class="friend" style="color: aliceblue;">
-            <!-- <h2 style="position:;left: 200px;">With a Group</h2> -->
+        </form></div>
+
+        <div class="friend" style="color:antiquewhite;">
+            <h1 style="margin-left: 20%;font-family: poppins;">With a Group</h1>
 
             <form method="POST" action="{{ url_for('addexgr') }}">
 
@@ -105,9 +49,7 @@
                 <input type="integer" name="amtU"><br>
 
                 <form method="POST" action="{{ url_for('addexgr') }}">
-                <h2 style="color:#16213E;">Group:
-                    <p style="font-size: 10px;">(if not a group, use group name as NULL and no.of people 2)</p>
-                </h2>
+                <h2 style="color:#16213E;">Group:</h2>
                 <input type="text" id="num-people1" name="num-people1" placeholder="Enter group name" required>
                 <div><input type="number" id="num-people" name="num-people" placeholder="Enter no of people" required>
                 </div>
@@ -116,9 +58,6 @@
                 <button type="submit" class="sub">Add</button>
                 </form>
 
-
-                <!-- <input type="hidden" name="id" value="1">
-                <button type="submit" style="position: relative;top:10px;">Login</button> -->
 
             </form>
 
