--- a/templates/Login.html
+++ b/templates/Login.html
@@ -49,7 +49,7 @@
             </div></div>
             <footer>
               <div class="footer-copy">&#169; Copyrights 2023 || Splitwise</div>
-              <div class="footer-about">Learn more about Splitwise<a href='./home.html'>here.</a></div>
+              <div class="footer-about">Learn more about Splitwise<a href="{{url_for('Home')}}">here.</a></div>
            </footer>
 </body>
               
