--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
     </header>
     <div class="profile" style="color: antiquewhite;">
         <span class="profiletext">Profile<span class="dot">.</span></span>
-        <a href="{{url_for('Home')}}">Log Out</a>
+        <a href="{{url_for('Home')}}"style="text-decoration-line: underline;">Log Out</a>
         <div >
             <h2 style="font-size: 17px; position:relative;top:120px;left:250px;font-family: poppins;">Email : {{prof[1]}}</h2>
             <h2 style="font-size: 17px;position: relative;top:140px;left:250px;font-family: poppins;">mobile : {{prof[2]}}</h2>
